--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@
 </head>
 <body>
   <header>
-    <h1>Belajar Passive Voice</h1>
-    <p>Materi Bahasa Inggris dengan penjelasan & latihan</p>
+    <h1>Passive Voice</h1>
   </header>
 
   <main>
@@ -319,3 +318,4 @@
 
 </body>
 </html>
+
