--- a/index.html
+++ b/index.html
@@ -229,16 +229,14 @@
   content.innerHTML = `
     <h2>Test - Essay</h2>
     <div class="exercise">
-      <p><b>1.</b> Ubah kalimat berikut menjadi Passive Voice:</p>
-      <p><i>Ali is reading a novel.</i></p>
+      <p> Ubah kalimat soal dibawah menjadi Passive Voice:</p>
+      <p><i>1. Ali is reading a novel.</i></p>
       <textarea id="essay1" rows="3" placeholder="Tulis jawabanmu..."></textarea>
 
-      <p><b>2.</b> Ubah kalimat berikut menjadi Passive Voice:</p>
-      <p><i>They will finish the project tomorrow.</i></p>
+      <p><i>2. They will finish the project tomorrow.</i></p>
       <textarea id="essay2" rows="3" placeholder="Tulis jawabanmu..."></textarea>
 
-      <p><b>3.</b> Ubah kalimat berikut menjadi Passive Voice:</p>
-      <p><i>The students are writing the report.</i></p>
+      <p><i>3. The students are writing the report.</i></p>
       <textarea id="essay3" rows="3" placeholder="Tulis jawabanmu..."></textarea>
 
       <br>
@@ -318,4 +316,5 @@
 
 </body>
 </html>
+
 
