--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
       flex: 1;
     }
 
-    /* Sidebar */
     aside {
       width: 260px;
       background: #34495e;
@@ -75,7 +74,6 @@
       color: #fff;
     }
 
-    /* Konten */
     .content {
       flex: 1;
       padding: 25px;
@@ -88,9 +86,9 @@
       color: #2c3e50;
       margin-top: 0;
     }
-    .content p {
+    .content p, .content li {
       text-align: justify;
-      margin-bottom: 15px;
+      margin-bottom: 10px;
     }
     .exercise {
       background: #f4f9ff;
@@ -99,13 +97,16 @@
       border-radius: 6px;
       margin: 15px 0;
     }
-    input[type="text"] {
+    textarea {
       width: 100%;
       padding: 8px;
       margin-top: 5px;
       margin-bottom: 10px;
       border-radius: 6px;
       border: 1px solid #ccc;
+    }
+    input[type="text"], input[type="radio"] {
+      margin-bottom: 5px;
     }
     button.submit {
       background: #1abc9c;
@@ -129,21 +130,16 @@
     <aside>
       <h3>Menu</h3>
       <button onclick="showPage('home')">🏠 Home</button>
-      <button onclick="showPage('search')">🔍 Search</button>
       <button onclick="showPage('passive')">📘 Passive Voice</button>
       <div class="submenu">
- <div class="submenu">
-  <button onclick="showPage('what')">- What is Passive Voice</button>
-  <button onclick="showPage('example')">- Example</button>
-  <button onclick="showPage('use')">- Use the Passive Voice</button>
-  <button onclick="showPage('how')">- How to Change Active</button>
-  <button onclick="showPage('tenses')">- Tenses</button>
-  <button onclick="showPage('exercise')">- Exercise</button>
-  <button onclick="showPage('test')">- Test</button> <!-- ✅ Tambahan -->
-</div>
-
+        <button onclick="showPage('what')">- What is Passive Voice</button>
+        <button onclick="showPage('example')">- Example</button>
+        <button onclick="showPage('use')">- Using the Passive Voice</button>
+        <button onclick="showPage('how')">- How to Change Active</button>
+        <button onclick="showPage('tenses')">- Tenses</button>
+        <button onclick="showPage('exercise')">- Exercise</button>
+        <button onclick="showPage('test')">- Test</button>
       </div>
-      <button onclick="showPage('contact')">📩 Contact</button>
     </aside>
 
     <div class="content" id="page-content">
@@ -155,173 +151,152 @@
   <script>
     function showPage(page) {
       let content = document.getElementById("page-content");
+
       if (page === "home") {
         content.innerHTML = `
           <h2>Halaman Utama</h2>
-          <p>Selamat datang di blog belajar Passive Voice. Blog ini berisi materi singkat, contoh, dan latihan soal.</p>
-        `;
-      } else if (page === "search") {
-        content.innerHTML = `
-          <h2>Search</h2>
-          <p>Fitur pencarian akan segera hadir.</p>
+          <p>Selamat datang di blog belajar Passive Voice. Blog ini berisi materi lengkap, contoh, dan latihan soal.</p>
         `;
       } else if (page === "what") {
         content.innerHTML = `
           <h2>What is Passive Voice?</h2>
-          <p>Passive voice adalah bentuk kalimat dimana subjek menerima aksi, bukan melakukan aksi.</p>
-          <p>Contoh: <i>The cake was eaten by Ali.</i></p>
+          <p>Passive voice is when the subject receives the action, rather than doing it. The focus is on the result or the object, not the person or thing doing the action.</p>
+          <p>In active sentences, the subject (actor) performs the action, while in passive sentences, the subject (recipient) is subjected to the action.</p>
         `;
       } else if (page === "example") {
         content.innerHTML = `
-          <h2>Examples</h2>
-          <ul>
-            <li>Active: She writes a letter. → Passive: A letter is written by her.</li>
-            <li>Active: They built a house. → Passive: A house was built by them.</li>
-          </ul>
+          <h2>Example</h2>
+          <p><b>Active:</b> Mary helped the boy. (Mary (subject) helped (verb) the boy (object))</p>
+          <p><b>Passive:</b> The boy was helped by Mary. (The boy (subject) was helped (verb) by Mary)</p>
         `;
       } else if (page === "use") {
         content.innerHTML = `
-          <h2>Use of Passive Voice</h2>
-          <p>Passive voice digunakan saat pelaku tidak penting, tidak diketahui, atau ingin menekankan objek.</p>
+          <h2>Using the Passive Voice</h2>
+          <p>Used when it is not known or not important to know exactly who performs an action.</p>
+          <p>Example: Rice is grown in India. (It is not important to know who grows the rice.)</p>
+          <p>The by-phrase is included only if it is important to know who performs an action. Example: Life on the Mississippi was written by Mark Twain.</p>
+          <p>If the speaker knows who performs an action, usually the active is used. Example: My aunt made this rug.</p>
         `;
       } else if (page === "how") {
         content.innerHTML = `
           <h2>How to Change Active to Passive</h2>
-          <p>Rumus umum: <b>Object + to be + V3 (past participle) + by + Subject</b></p>
+          <p>Identify the object of the active voice sentence, make it the subject of the new sentence, and use a form of “to be” followed by the past participle of the main verb, often including the original subject introduced by “by.”</p>
         `;
       } else if (page === "tenses") {
         content.innerHTML = `
-          <h2>Passive Voice in Tenses</h2>
-          <p><b>Present Simple:</b> Active: He cleans the room. → Passive: The room is cleaned by him.</p>
-          <p><b>Past Simple:</b> Active: She made a cake. → Passive: A cake was made by her.</p>
+          <h2>Tenses</h2>
+          <p><b>Simple Present Tense:</b> Active: Marry helps the boy → Passive: The boy is helped by Marry</p>
+          <p><b>Present Progressive Tense:</b> Active: Marry is helping the boy → Passive: The boy is being helped by Marry</p>
+          <p><b>Past Progressive Tense:</b> Active: Marry was helping the boy → Passive: The boy was being helped by Marry</p>
+          <p><b>Present Perfect Tense:</b> Active: Marry has helped the boy → Passive: The boy has been helped by Marry</p>
+          <p><b>Simple Past Tense:</b> Active: Marry helped the boy → Passive: The boy was helped by Marry</p>
+          <p><b>Past Perfect Tense:</b> Active: Marry had helped the boy → Passive: The boy had been helped by Marry</p>
+          <p><b>Simple Future Tense:</b> Active: Marry will help the boy → Passive: The boy will be helped by Marry</p>
+          <p><b>Going to Future:</b> Active: Marry is going to help the boy → Passive: The boy is going to be helped by Marry</p>
+          <p><b>Future Perfect Tense:</b> Active: Marry will have helped the boy → Passive: The boy will have been helped by Marry</p>
         `;
-      } // Di fungsi showPage
-else if (page === "exercise") {
-  content.innerHTML = `
-    <h2>Exercise - Essay</h2>
-    <div class="exercise">
-      <p>Ubah kalimat berikut menjadi Passive Voice:</p>
-
-      <p><i>1. Ali is reading a novel.</i></p>
-      <textarea id="essay1" rows="3" placeholder="Tulis jawabanmu..."></textarea>
-
-      <p><i>2. They will finish the project tomorrow.</i></p>
-      <textarea id="essay2" rows="3" placeholder="Tulis jawabanmu..."></textarea>
-
-      <p><i>3. The students are writing the report.</i></p>
-      <textarea id="essay3" rows="3" placeholder="Tulis jawabanmu..."></textarea>
-
-      <br>
-      <button class="submit" onclick="checkEssay()">Periksa Jawaban</button>
-      <p id="essayResult"></p>
-    </div>
-  `;
-}
-
-else if (page === "test") {
-  content.innerHTML = `
-    <h2>Test - Pilihan Ganda</h2>
-    <div class="exercise">
-      <p><b>1.</b> They drink coffee every morning. (Passive?)</p>
-      <label><input type="radio" name="q1" value="wrong"> Coffee is drank every morning by them.</label><br>
-      <label><input type="radio" name="q1" value="correct"> Coffee is drunk every morning by them.</label><br>
-      <label><input type="radio" name="q1" value="wrong"> Coffee was drunk every morning by them.</label><br>
-      <p id="ans1" style="color:red; display:none;"></p>
-
-      <p><b>2.</b> She wrote a letter yesterday. (Passive?)</p>
-      <label><input type="radio" name="q2" value="wrong"> A letter is written by her yesterday.</label><br>
-      <label><input type="radio" name="q2" value="correct"> A letter was written by her yesterday.</label><br>
-      <label><input type="radio" name="q2" value="wrong"> A letter were written by her yesterday.</label><br>
-      <p id="ans2" style="display:none;"></p>
-
-      <p><b>3.</b> The teacher explains the lesson. (Passive?)</p>
-      <label><input type="radio" name="q3" value="wrong"> The lesson was explained by the teacher.</label><br>
-      <label><input type="radio" name="q3" value="correct"> The lesson is explained by the teacher.</label><br>
-      <label><input type="radio" name="q3" value="wrong"> The lesson has explained by the teacher.</label><br>
-      <p id="ans3" style="display:none;"></p>
-
-      <br>
-      <button class="submit" onclick="checkAnswers()">Periksa Jawaban</button>
-    </div>
-  `;
-}else if (page === "contact") {
+      } else if (page === "exercise") {
         content.innerHTML = `
-          <h2>Contact</h2>
-          <p>Email: <a href="mailto:ahmad@example.com">ahmad@example.com</a></p>
-          <p>Instagram: <a href="https://instagram.com/ahmad" target="_blank">@ahmad</a></p>
+          <h2>Exercise - Essay</h2>
+          <div class="exercise">
+            <p>Change the active to the passive:</p>
+            <p><i>1. Tom opens the door.</i></p>
+            <textarea id="essay1" rows="3" placeholder="Tulis jawabanmu..."></textarea>
+            <p><i>2. Tom is opening the door.</i></p>
+            <textarea id="essay2" rows="3" placeholder="Tulis jawabanmu..."></textarea>
+            <p><i>3. Tom has opened the door.</i></p>
+            <textarea id="essay3" rows="3" placeholder="Tulis jawabanmu..."></textarea>
+            <p><i>4. Tom opened the door.</i></p>
+            <textarea id="essay4" rows="3" placeholder="Tulis jawabanmu..."></textarea>
+            <br>
+            <button class="submit" onclick="checkEssay()">Periksa Jawaban</button>
+            <p id="essayResult"></p>
+          </div>
+        `;
+      } else if (page === "test") {
+        content.innerHTML = `
+          <h2>Test - Pilihan Ganda</h2>
+          <div class="exercise">
+            <p><b>1.</b> They drink coffee every morning. (Passive?)</p>
+            <label><input type="radio" name="q1" value="wrong"> Coffee is drank every morning by them.</label><br>
+            <label><input type="radio" name="q1" value="correct"> Coffee is drunk every morning by them.</label><br>
+            <label><input type="radio" name="q1" value="wrong"> Coffee was drunk every morning by them.</label><br>
+            <p id="ans1" style="color:red; display:none;"></p>
+
+            <p><b>2.</b> She wrote a letter yesterday. (Passive?)</p>
+            <label><input type="radio" name="q2" value="wrong"> A letter is written by her yesterday.</label><br>
+            <label><input type="radio" name="q2" value="correct"> A letter was written by her yesterday.</label><br>
+            <label><input type="radio" name="q2" value="wrong"> A letter were written by her yesterday.</label><br>
+            <p id="ans2" style="display:none;"></p>
+
+            <p><b>3.</b> The teacher explains the lesson. (Passive?)</p>
+            <label><input type="radio" name="q3" value="wrong"> The lesson was explained by the teacher.</label><br>
+            <label><input type="radio" name="q3" value="correct"> The lesson is explained by the teacher.</label><br>
+            <label><input type="radio" name="q3" value="wrong"> The lesson has explained by the teacher.</label><br>
+            <p id="ans3" style="display:none;"></p>
+
+            <br>
+            <button class="submit" onclick="checkAnswers()">Periksa Jawaban</button>
+          </div>
         `;
       }
-
     }
 
     function checkAnswers() {
-    let score = 0;
-
-    // Soal dan jawaban benar
-    let correctAnswers = {
-      q1: "Coffee is drunk every morning by them.",
-      q2: "A letter was written by her yesterday.",
-      q3: "The lesson is explained by the teacher."
-    };
-
-    // Loop untuk tiap soal
-    for (let i = 1; i <= 3; i++) {
-      let q = document.querySelector('input[name="q'+i+'"]:checked');
-      let ans = document.getElementById("ans"+i);
-
-      if (q) {
-        if (q.value === "correct") {
-          ans.style.color = "green";
-          ans.innerText = "✅ Jawaban benar!";
-          ans.style.display = "block";
-          score++;
+      let score = 0;
+      let correctAnswers = {
+        q1: "Coffee is drunk every morning by them.",
+        q2: "A letter was written by her yesterday.",
+        q3: "The lesson is explained by the teacher."
+      };
+      for (let i = 1; i <= 3; i++) {
+        let q = document.querySelector('input[name="q'+i+'"]:checked');
+        let ans = document.getElementById("ans"+i);
+        if (q) {
+          if (q.value === "correct") {
+            ans.style.color = "green";
+            ans.innerText = "✅ Jawaban benar!";
+            ans.style.display = "block";
+            score++;
+          } else {
+            ans.style.color = "red";
+            ans.innerHTML = "❌ Jawaban salah. <br> Jawaban benar: <b>" + correctAnswers["q"+i] + "</b>";
+            ans.style.display = "block";
+          }
         } else {
-          ans.style.color = "red";
-          ans.innerHTML = "❌ Jawaban salah. <br> Jawaban benar: <b>" + correctAnswers["q"+i] + "</b>";
+          ans.style.color = "orange";
+          ans.innerText = "⚠️ Belum memilih jawaban.";
           ans.style.display = "block";
         }
-      } else {
-        ans.style.color = "orange";
-        ans.innerText = "⚠️ Belum memilih jawaban.";
-        ans.style.display = "block";
       }
+      alert("Skor kamu: " + score + "/3");
     }
 
-    alert("Skor kamu: " + score + "/3");
-  }
-
-  function checkEssay() {
-  let answers = {
-    essay1: "A novel is being read by Ali.",
-    essay2: "The project will be finished tomorrow by them.",
-    essay3: "The report is being written by the students."
-  };
-
-  let score = 0;
-  let total = 3;
-  let resultText = "";
-
-  for (let i = 1; i <= total; i++) {
-    let userAnswer = document.getElementById("essay"+i).value.trim();
-    if (userAnswer.toLowerCase() === answers["essay"+i].toLowerCase()) {
-      resultText += `<p style="color:green">✅ Soal ${i}: Benar</p>`;
-      score++;
-    } else {
-      resultText += `<p style="color:red">❌ Soal ${i}: Salah<br>Jawaban benar: <b>${answers["essay"+i]}</b></p>`;
+    function checkEssay() {
+      let answers = {
+        essay1: "The door is opened by Tom.",
+        essay2: "The door is being opened by Tom.",
+        essay3: "The door has been opened by Tom.",
+        essay4: "The door was opened by Tom."
+      };
+      let score = 0;
+      let total = 4;
+      let resultText = "";
+      for (let i = 1; i <= total; i++) {
+        let userAnswer = document.getElementById("essay"+i).value.trim();
+        if (userAnswer.toLowerCase() === answers["essay"+i].toLowerCase()) {
+          resultText += `<p style="color:green">✅ Soal ${i}: Benar</p>`;
+          score++;
+        } else {
+          resultText += `<p style="color:red">❌ Soal ${i}: Salah<br>Jawaban benar: <b>${answers["essay"+i]}</b></p>`;
+        }
+      }
+      document.getElementById("essayResult").innerHTML = `
+        <h3>Hasil:</h3>
+        ${resultText}
+        <p><b>Skor: ${score}/${total}</b></p>
+      `;
     }
-  }
-
-  document.getElementById("essayResult").innerHTML = `
-    <h3>Hasil:</h3>
-    ${resultText}
-    <p><b>Skor: ${score}/${total}</b></p>
-  `;
-}
-
   </script>
-
 </body>
 </html>
-
-
-
