--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
       background: #2c3e50;
       color: #fff;
       padding: 20px;
-      text-align: center;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    header h1 { margin: 0; font-size: 20px; }
+
+    .menu-toggle {
+      display: none;
+      font-size: 24px;
+      cursor: pointer;
     }
 
     main {
@@ -33,10 +42,8 @@
       color: #fff;
       padding: 20px;
       box-sizing: border-box;
-      min-height: 100vh;
-      position: sticky;
-      top: 0;
     }
+
     aside h3 {
       margin-top: 0;
       font-size: 1.1em;
@@ -44,6 +51,7 @@
       padding-bottom: 10px;
       margin-bottom: 15px;
     }
+
     aside button {
       display: block;
       width: 100%;
@@ -58,9 +66,9 @@
       margin-bottom: 6px;
       transition: background 0.3s;
     }
-    aside button:hover {
-      background: #1abc9c;
-    }
+
+    aside button:hover { background: #1abc9c; }
+
     aside .submenu {
       margin-left: 10px;
       margin-top: 5px;
@@ -70,9 +78,7 @@
       padding-left: 20px;
       color: #bdc3c7;
     }
-    aside .submenu button:hover {
-      color: #fff;
-    }
+    aside .submenu button:hover { color: #fff; }
 
     .content {
       flex: 1;
@@ -82,14 +88,10 @@
       margin: 20px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.08);
     }
-    .content h2 {
-      color: #2c3e50;
-      margin-top: 0;
-    }
-    .content p, .content li {
-      text-align: justify;
-      margin-bottom: 10px;
-    }
+
+    .content h2 { color: #2c3e50; margin-top: 0; }
+    .content p, .content li { text-align: justify; margin-bottom: 10px; }
+
     .exercise {
       background: #f4f9ff;
       padding: 15px;
@@ -97,17 +99,11 @@
       border-radius: 6px;
       margin: 15px 0;
     }
-    textarea {
-      width: 100%;
-      padding: 8px;
-      margin-top: 5px;
-      margin-bottom: 10px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-    }
-    input[type="text"], input[type="radio"] {
+    textarea, input[type="text"], input[type="radio"] {
       margin-bottom: 5px;
     }
+
+    textarea { width: 100%; padding: 8px; border-radius: 6px; border: 1px solid #ccc; }
     button.submit {
       background: #1abc9c;
       color: #fff;
@@ -116,18 +112,25 @@
       border-radius: 6px;
       cursor: pointer;
     }
-    button.submit:hover {
-      background: #16a085;
+    button.submit:hover { background: #16a085; }
+
+    /* RESPONSIVE */
+    @media (max-width: 768px) {
+      main { flex-direction: column; }
+      aside { width: 100%; display: none; }
+      .menu-toggle { display: block; }
+      aside.active { display: block; }
     }
   </style>
 </head>
 <body>
   <header>
     <h1>Passive Voice</h1>
+    <span class="menu-toggle" onclick="toggleMenu()">☰</span>
   </header>
 
   <main>
-    <aside>
+    <aside id="sidebar">
       <h3>Menu</h3>
       <button onclick="showPage('home')">🏠 Home</button>
       <button onclick="showPage('passive')">📘 Passive Voice</button>
@@ -149,154 +152,48 @@
   </main>
 
   <script>
+    function toggleMenu() {
+      document.getElementById('sidebar').classList.toggle('active');
+    }
+
     function showPage(page) {
       let content = document.getElementById("page-content");
 
       if (page === "home") {
-        content.innerHTML = `
-          <h2>Halaman Utama</h2>
-          <p>Selamat datang di blog belajar Passive Voice. Blog ini berisi materi lengkap, contoh, dan latihan soal.</p>
-        `;
+        content.innerHTML = `<h2>Halaman Utama</h2>
+        <p>Selamat datang di blog belajar Passive Voice. Blog ini berisi materi lengkap, contoh, dan latihan soal.</p>`;
       } else if (page === "what") {
-        content.innerHTML = `
-          <h2>What is Passive Voice?</h2>
-          <p>Passive voice is when the subject receives the action, rather than doing it. The focus is on the result or the object, not the person or thing doing the action.</p>
-          <p>In active sentences, the subject (actor) performs the action, while in passive sentences, the subject (recipient) is subjected to the action.</p>
-        `;
+        content.innerHTML = `<h2>What is Passive Voice?</h2>
+        <p>Passive voice is when the subject receives the action, rather than doing it. The focus is on the result or the object, not the person or thing doing the action.</p>
+        <p>In active sentences, the subject (actor) performs the action, while in passive sentences, the subject (recipient) is subjected to the action.</p>`;
       } else if (page === "example") {
-        content.innerHTML = `
-          <h2>Example</h2>
-          <p><b>Active:</b> Mary helped the boy. (Mary (subject) helped (verb) the boy (object))</p>
-          <p><b>Passive:</b> The boy was helped by Mary. (The boy (subject) was helped (verb) by Mary)</p>
-        `;
+        content.innerHTML = `<h2>Example</h2>
+        <p><b>Active:</b> Mary helped the boy. (Mary (subject) helped (verb) the boy (object))</p>
+        <p><b>Passive:</b> The boy was helped by Mary. (The boy (subject) was helped (verb) by Mary)</p>`;
       } else if (page === "use") {
-        content.innerHTML = `
-          <h2>Using the Passive Voice</h2>
-          <p>Used when it is not known or not important to know exactly who performs an action.</p>
-          <p>Example: Rice is grown in India. (It is not important to know who grows the rice.)</p>
-          <p>The by-phrase is included only if it is important to know who performs an action. Example: Life on the Mississippi was written by Mark Twain.</p>
-          <p>If the speaker knows who performs an action, usually the active is used. Example: My aunt made this rug.</p>
-        `;
+        content.innerHTML = `<h2>Using the Passive Voice</h2>
+        <p>Used when it is not known or not important to know exactly who performs an action.</p>
+        <p>Example: Rice is grown in India. (It is not important to know who grows the rice.)</p>
+        <p>The by-phrase is included only if it is important to know who performs an action. Example: Life on the Mississippi was written by Mark Twain.</p>
+        <p>If the speaker knows who performs an action, usually the active is used. Example: My aunt made this rug.</p>`;
       } else if (page === "how") {
-        content.innerHTML = `
-          <h2>How to Change Active to Passive</h2>
-          <p>Identify the object of the active voice sentence, make it the subject of the new sentence, and use a form of “to be” followed by the past participle of the main verb, often including the original subject introduced by “by.”</p>
-        `;
+        content.innerHTML = `<h2>How to Change Active to Passive</h2>
+        <p>Identify the object of the active voice sentence, make it the subject of the new sentence, and use a form of “to be” followed by the past participle of the main verb, often including the original subject introduced by “by.”</p>`;
       } else if (page === "tenses") {
-        content.innerHTML = `
-          <h2>Tenses</h2>
-          <p><b>Simple Present Tense:</b> Active: Marry helps the boy → Passive: The boy is helped by Marry</p>
-          <p><b>Present Progressive Tense:</b> Active: Marry is helping the boy → Passive: The boy is being helped by Marry</p>
-          <p><b>Past Progressive Tense:</b> Active: Marry was helping the boy → Passive: The boy was being helped by Marry</p>
-          <p><b>Present Perfect Tense:</b> Active: Marry has helped the boy → Passive: The boy has been helped by Marry</p>
-          <p><b>Simple Past Tense:</b> Active: Marry helped the boy → Passive: The boy was helped by Marry</p>
-          <p><b>Past Perfect Tense:</b> Active: Marry had helped the boy → Passive: The boy had been helped by Marry</p>
-          <p><b>Simple Future Tense:</b> Active: Marry will help the boy → Passive: The boy will be helped by Marry</p>
-          <p><b>Going to Future:</b> Active: Marry is going to help the boy → Passive: The boy is going to be helped by Marry</p>
-          <p><b>Future Perfect Tense:</b> Active: Marry will have helped the boy → Passive: The boy will have been helped by Marry</p>
-        `;
+        content.innerHTML = `<h2>Tenses</h2>
+        <p><b>Simple Present:</b> Active: Marry helps the boy → Passive: The boy is helped by Marry</p>
+        <p><b>Present Progressive:</b> Active: Marry is helping the boy → Passive: The boy is being helped by Marry</p>
+        <p><b>Past Progressive:</b> Active: Marry was helping the boy → Passive: The boy was being helped by Marry</p>
+        <p><b>Present Perfect:</b> Active: Marry has helped the boy → Passive: The boy has been helped by Marry</p>
+        <p><b>Simple Past:</b> Active: Marry helped the boy → Passive: The boy was helped by Marry</p>
+        <p><b>Past Perfect:</b> Active: Marry had helped the boy → Passive: The boy had been helped by Marry</p>
+        <p><b>Simple Future:</b> Active: Marry will help the boy → Passive: The boy will be helped by Marry</p>
+        <p><b>Going to Future:</b> Active: Marry is going to help the boy → Passive: The boy is going to be helped by Marry</p>
+        <p><b>Future Perfect:</b> Active: Marry will have helped the boy → Passive: The boy will have been helped by Marry</p>`;
       } else if (page === "exercise") {
-        content.innerHTML = `
-          <h2>Exercise - Essay</h2>
-          <div class="exercise">
-            <p>Change the active to the passive:</p>
-            <p><i>1. Tom opens the door.</i></p>
-            <textarea id="essay1" rows="3" placeholder="Tulis jawabanmu..."></textarea>
-            <p><i>2. Tom is opening the door.</i></p>
-            <textarea id="essay2" rows="3" placeholder="Tulis jawabanmu..."></textarea>
-            <p><i>3. Tom has opened the door.</i></p>
-            <textarea id="essay3" rows="3" placeholder="Tulis jawabanmu..."></textarea>
-            <p><i>4. Tom opened the door.</i></p>
-            <textarea id="essay4" rows="3" placeholder="Tulis jawabanmu..."></textarea>
-            <br>
-            <button class="submit" onclick="checkEssay()">Periksa Jawaban</button>
-            <p id="essayResult"></p>
-          </div>
-        `;
-      } else if (page === "test") {
-        content.innerHTML = `
-          <h2>Test - Pilihan Ganda</h2>
-          <div class="exercise">
-            <p><b>1.</b> They drink coffee every morning. (Passive?)</p>
-            <label><input type="radio" name="q1" value="wrong"> Coffee is drank every morning by them.</label><br>
-            <label><input type="radio" name="q1" value="correct"> Coffee is drunk every morning by them.</label><br>
-            <label><input type="radio" name="q1" value="wrong"> Coffee was drunk every morning by them.</label><br>
-            <p id="ans1" style="color:red; display:none;"></p>
-
-            <p><b>2.</b> She wrote a letter yesterday. (Passive?)</p>
-            <label><input type="radio" name="q2" value="wrong"> A letter is written by her yesterday.</label><br>
-            <label><input type="radio" name="q2" value="correct"> A letter was written by her yesterday.</label><br>
-            <label><input type="radio" name="q2" value="wrong"> A letter were written by her yesterday.</label><br>
-            <p id="ans2" style="display:none;"></p>
-
-            <p><b>3.</b> The teacher explains the lesson. (Passive?)</p>
-            <label><input type="radio" name="q3" value="wrong"> The lesson was explained by the teacher.</label><br>
-            <label><input type="radio" name="q3" value="correct"> The lesson is explained by the teacher.</label><br>
-            <label><input type="radio" name="q3" value="wrong"> The lesson has explained by the teacher.</label><br>
-            <p id="ans3" style="display:none;"></p>
-
-            <br>
-            <button class="submit" onclick="checkAnswers()">Periksa Jawaban</button>
-          </div>
-        `;
-      }
-    }
-
-    function checkAnswers() {
-      let score = 0;
-      let correctAnswers = {
-        q1: "Coffee is drunk every morning by them.",
-        q2: "A letter was written by her yesterday.",
-        q3: "The lesson is explained by the teacher."
-      };
-      for (let i = 1; i <= 3; i++) {
-        let q = document.querySelector('input[name="q'+i+'"]:checked');
-        let ans = document.getElementById("ans"+i);
-        if (q) {
-          if (q.value === "correct") {
-            ans.style.color = "green";
-            ans.innerText = "✅ Jawaban benar!";
-            ans.style.display = "block";
-            score++;
-          } else {
-            ans.style.color = "red";
-            ans.innerHTML = "❌ Jawaban salah. <br> Jawaban benar: <b>" + correctAnswers["q"+i] + "</b>";
-            ans.style.display = "block";
-          }
-        } else {
-          ans.style.color = "orange";
-          ans.innerText = "⚠️ Belum memilih jawaban.";
-          ans.style.display = "block";
-        }
-      }
-      alert("Skor kamu: " + score + "/3");
-    }
-
-    function checkEssay() {
-      let answers = {
-        essay1: "The door is opened by Tom.",
-        essay2: "The door is being opened by Tom.",
-        essay3: "The door has been opened by Tom.",
-        essay4: "The door was opened by Tom."
-      };
-      let score = 0;
-      let total = 4;
-      let resultText = "";
-      for (let i = 1; i <= total; i++) {
-        let userAnswer = document.getElementById("essay"+i).value.trim();
-        if (userAnswer.toLowerCase() === answers["essay"+i].toLowerCase()) {
-          resultText += `<p style="color:green">✅ Soal ${i}: Benar</p>`;
-          score++;
-        } else {
-          resultText += `<p style="color:red">❌ Soal ${i}: Salah<br>Jawaban benar: <b>${answers["essay"+i]}</b></p>`;
-        }
-      }
-      document.getElementById("essayResult").innerHTML = `
-        <h3>Hasil:</h3>
-        ${resultText}
-        <p><b>Skor: ${score}/${total}</b></p>
-      `;
-    }
-  </script>
-</body>
-</html>
+        content.innerHTML = `<h2>Exercise - Essay</h2>
+        <div class="exercise">
+        <p>Change the active to the passive:</p>
+        <p><i>1. Tom opens the door.</i></p><textarea id="essay1" rows="3" placeholder="Tulis jawabanmu..."></textarea>
+        <p><i>2. Tom is opening the door.</i></p><textarea id="essay2" rows="3" placeholder="Tulis jawabanmu..."></textarea>
+        <p><i>3. Tom has opened the door.</i></p><textarea id="essay3
