--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   <header>
     <h1>Passive Voice</h1>
   <input type="text" id="searchBox" placeholder="Cari materi..." onkeyup="searchContent()">
-  <span class="menu-toggle" onclick="toggleMenu()">☰</span>>
+  <span class="menu-toggle" onclick="toggleMenu()">☰</span>
   </header>
 
   <main>
@@ -366,6 +366,7 @@
         <p><i>1. Tom opens the door.</i></p><textarea id="essay1" rows="3" placeholder="Tulis jawabanmu..."></textarea>
         <p><i>2. Tom is opening the door.</i></p><textarea id="essay2" rows="3" placeholder="Tulis jawabanmu..."></textarea>
         <p><i>3. Tom has opened the door.</i></p><textarea id="essay3
+
 
 
 
