--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
     <aside id="sidebar">
       <h3>Menu</h3>
       <button onclick="showPage('home')">🏠 Home</button>
+      <li>
+      <input type="text" id="searchBox" placeholder="🔍 Cari materi..." onkeyup="searchContent()">
+      </li>
       <button onclick="showPage('passive')">📘 Passive Voice</button>
       <div class="submenu">
         <button onclick="showPage('what')">- What is Passive Voice</button>
@@ -366,6 +369,7 @@
         <p><i>1. Tom opens the door.</i></p><textarea id="essay1" rows="3" placeholder="Tulis jawabanmu..."></textarea>
         <p><i>2. Tom is opening the door.</i></p><textarea id="essay2" rows="3" placeholder="Tulis jawabanmu..."></textarea>
         <p><i>3. Tom has opened the door.</i></p><textarea id="essay3
+
 
 
 
