--- a/index.html
+++ b/index.html
@@ -176,25 +176,29 @@
       <p>Passive voice is when the subject receives the action, rather than doing it. The focus is on the result or the object, not the person or thing doing the action.</p>
       <p>In active sentences, the subject (actor) performs the action, while in passive sentences, the subject (recipient) is subjected to the action.</p>`,
     example: `<h2>Example</h2>
-      <p><b>Active:</b> Mary helped the boy. (Mary (subject) helped (verb) the boy (object))</p>
-      <p><b>Passive:</b> The boy was helped by Mary. (The boy (subject) was helped (verb) by Mary)</p>`,
-    use: `<h2>Using the Passive Voice</h2>
-      <p>Used when it is not known or not important to know exactly who performs an action.</p>
-      <p>Example: Rice is grown in India. (It is not important to know who grows the rice.)</p>
-      <p>The by-phrase is included only if it is important to know who performs an action. Example: Life on the Mississippi was written by Mark Twain.</p>
-      <p>If the speaker knows who performs an action, usually the active is used. Example: My aunt made this rug.</p>`,
-    how: `<h2>How to Change Active to Passive</h2>
-      <p>Identify the object of the active voice sentence, make it the subject of the new sentence, and use a form of “to be” followed by the past participle of the main verb, often including the original subject introduced by “by.”</p>`,
+      <p><b>Active:</b> Mary helped the boy. <br/>(Mary (subject) helped (verb) the boy (object)</p>
+      <p><b>Passive:</b> The boy was helped by Mary. <br/>(The boy (subject) was helped (verb) by Mary)</p>`,
+    
+      use: `<h2>Using the Passive Voice</h2>
+      <p>1. When it is not known or not important to know exactly who performs an action.</p>
+      <p>Rice is grown in India. (Rice is grown in india by people, by farmers, by someone. it is not known or important to know exactly who grows rice in india)</p>
+      <p>2. The by-phrase is included only if it is important to know who performs an action.</p>
+      <p>Life on the Mississippi was written by Mark Twain. (Where by Mark Twain is important information)</p>
+      <p>3. If the speaker knows who performs an action, usually the active is used.</p>
+      <p>My aunt made this rug.</p>`,
+     
+      how: `<h2>How to Change Active to Passive</h2>
+      <p>Identify the object of the active voice sentence, make it the subject of the new sentence, and use a form of “to be” followed by the past participle of the main verb, often including the original subject introduced by “by.”To change active voice to passive voice, identify the object of the active voice sentence, make it the subject of the new sentence, and use a form of “to be” followed by the past participle of the main verb, often including the original subject introduced by “by.”</p>`,
     tenses: `<h2>Tenses</h2>
-      <p><b>Simple Present:</b> Active: Marry helps the boy → Passive: The boy is helped by Marry</p>
-      <p><b>Present Progressive:</b> Active: Marry is helping the boy → Passive: The boy is being helped by Marry</p>
-      <p><b>Past Progressive:</b> Active: Marry was helping the boy → Passive: The boy was being helped by Marry</p>
-      <p><b>Present Perfect:</b> Active: Marry has helped the boy → Passive: The boy has been helped by Marry</p>
-      <p><b>Simple Past:</b> Active: Marry helped the boy → Passive: The boy was helped by Marry</p>
-      <p><b>Past Perfect:</b> Active: Marry had helped the boy → Passive: The boy had been helped by Marry</p>
-      <p><b>Simple Future:</b> Active: Marry will help the boy → Passive: The boy will be helped by Marry</p>
-      <p><b>Going to Future:</b> Active: Marry is going to help the boy → Passive: The boy is going to be helped by Marry</p>
-      <p><b>Future Perfect:</b> Active: Marry will have helped the boy → Passive: The boy will have been helped by Marry</p>`,
+      <p><b>Simple Present Tense:</b> <br/>Active: Subject + verb-1 + Object = Marry helps the boy  <br/>Passive: Object + am/is/are + verb-3 + by + Subject = The boy is helped to By Marry</p>
+      <p><b>Present Progressive Tense:</b> <br/>Active: Subject + am/is/are + verb-ing + Object = Marry is helping the boy <br/>Passive: Object + am/is/are + being + verb-3 + by + Subject = The boy is being helped by Marry</p>
+      <p><b>Past Progressive Tense:</b> <br/>Active: Subject + was/were + verb-ing + Object = Marry was helping the boy  <br/>Passive: Object + was/were + being + verb-3 + by + Subject = The boy was being helped by Marry</p>
+      <p><b>Present Perfect Tense:</b> <br/>Active: Subject + have/has + verb-3 + Object = Marry has helped the boy <br/>Passive: Object + have/has + been + verb-3 + by + Subject = The boy is being helped by Marry</p>
+      <p><b>Simple Past Tense:</b> <br/>Active: Subject + verb-2 + Object = Marry helped the boy <br/>Passive: Object + was/were + verb-3 + by + Subject = The boy was helped by Marry</p>
+      <p><b>Past Perfect Tense:</b> <br/>Active: Subject + had + verb-3 + Object = Marry had helped the boy <br/>Passive: Object + had + been + verb-3 + by + Subject = The boy she had been helped by Marry</p>
+      <p><b>Simple Future Tense:</b> <br/>Active: Subject + will + verb-1 + Object = Marry will help the boy <br/>Passive: Object + will + be + verb-3 + by + Subject = The boy will be helped by Marry</p>
+      <p><b>Going to Future Tense:</b> <br/>Active: Subject + am/is/are + going to + verb-1 + Object = Marry is go ing to help the boy <br/>Passive: Object + am/is/are + going to be + verb-3 + by + Subject = The boy is going to be helped by Marry</p>
+      <p><b>Future Perfect Tense:</b> <br/>Active: Subject + will have + verb-3 + Object = Marry will have helped the boy <br/>Passive: Object + will have been + verb-3 + by + Subject = The boy will have been helped by Marry</p>`,
     exercise: `<h2>Exercise - Essay</h2>
       <div class="exercise">
         <p>Change the active to the passive:</p>
