--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blog Belajar - Passive Voice</title>
+  <title>Passive Voice</title>
   <style>
     body {
       margin: 0;
@@ -163,15 +163,15 @@
     </aside>
 
     <div class="content" id="page-content">
-      <h2>Selamat Datang</h2>
-      <p>Ini adalah blog pembelajaran Passive Voice. Silakan pilih menu di samping untuk melihat materi.</p>
+      <h2>Welcome</h2>
+      <p>This is a Passive Voice learning blog. Please select the menu on the side to view the materials.</p>
     </div>
   </main>
 
   <script>
     const pages = {
-    home: `<h2>Halaman Utama</h2>
-      <p>Selamat datang di blog belajar Passive Voice. Blog ini berisi materi lengkap, contoh, dan latihan soal.</p>`,
+    home: `<h2>Home</h2>
+      <p>This is a Passive Voice learning blog. Please select the menu on the side to view the materials.</p>`,
     what: `<h2>What is Passive Voice?</h2>
       <p>Passive voice is when the subject receives the action, rather than doing it. The focus is on the result or the object, not the person or thing doing the action.</p>
       <p>In active sentences, the subject (actor) performs the action, while in passive sentences, the subject (recipient) is subjected to the action.</p>`,
@@ -347,3 +347,4 @@
   </script>
 </body>
 </html>
+
