--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <br>
     <button class="submit" onclick="checkEssay()">Periksa Jawaban</button>
     <p id="essayResult"></p>
-  </div>`
+  </div>`,
 
     test: `<h2>Test - Pilihan Ganda</h2>
       <div class="exercise">
@@ -360,5 +360,6 @@
   </script>
 </body>
 </html>
+
 
 
